# xmr

./: .gitignore  gradle.properties
app/: build.gradle  myapp-release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MevaCoinJNI.cpp  native-lib.cpp
app/src/main/cpp/prebuilt/arm64-v8a/: mevacoin-service  xkrwallet  xkrwallet-beta
app/src/main/java/com/tuonome/myapp/: MainActivity.kt  MevaCoinNative.kt  TransactionAdapter.kt
app/src/main/res/layout/: activity_main.xml
